<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.main.MainActivity"
    tools:deviceIds="tv"
    tools:ignore="MergeRootFrame"
    android:clipChildren="false">

    <com.phlox.tvwebbrowser.activity.main.view.CursorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/flWebViewContainer" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/progressBar"
        android:progressTint="@color/progressbar_tint"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlActionBar"
        android:background="@color/top_bar_background"
        android:elevation="5dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.phlox.tvwebbrowser.activity.main.view.tabs.TabsView
            android:id="@+id/vTabs"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:visibility="gone"
            android:nextFocusDown="@+id/ibCloseTab"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivMiniatures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/llMiniaturePlaceholder"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:layout_below="@+id/rlActionBar"
        android:layout_alignWithParentIfMissing="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_box_24"
            android:layout_marginEnd="20dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/open_a_new_tab_here" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llBottomPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:clipChildren="false"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ibCloseTab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/close_tab"
            android:src="@drawable/ic_close_grey_900_24dp"
            android:layout_margin="3dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibBack"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/navigate_back"
            android:src="@drawable/back_icon_selector"
            android:layout_margin="3dp"
            android:nextFocusLeft="@+id/btnTab"
            android:nextFocusRight="@+id/ibForward"
            android:nextFocusUp="@+id/vTabs"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/ibForward"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibForward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/navigate_forward"
            android:src="@drawable/forward_icon_selector"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:nextFocusLeft="@+id/ibBack"
            android:nextFocusRight="@+id/ibRefresh"
            android:nextFocusUp="@+id/vTabs"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/ibRefresh"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibBack"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibRefresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/refresh_page"
            android:src="@drawable/ic_refresh_grey_900_24dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:nextFocusLeft="@+id/ibForward"
            android:nextFocusRight="@+id/etUrl"
            android:nextFocusUp="@+id/vTabs"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/etUrl"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibForward"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/button_bg_selector"
            android:hint="@string/url_prompt"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textFilter|textNoSuggestions|textUri"
            android:textColor="@color/default_url_color"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:nextFocusLeft="@+id/ibRefresh"
            android:nextFocusRight="@+id/ibHome"
            android:nextFocusUp="@+id/vTabs"
            app:layout_constraintEnd_toStartOf="@+id/ibHome"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibRefresh"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibHome"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/navigate_home"
            android:src="@drawable/ic_home_grey_900_24dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:nextFocusLeft="@+id/etUrl"
            android:nextFocusRight="@+id/btnTab"
            android:nextFocusUp="@+id/vTabs"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/btnTab"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/etUrl"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnTab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="New Tab"
            android:fontFamily="serif"
            android:padding="0dp"
            android:stateListAnimator="@null"
            android:text="+"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:nextFocusLeft="@+id/ibHome"
            android:nextFocusRight="@+id/ibBack"
            android:nextFocusUp="@+id/vTabs"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibHome"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibHistory"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/history"
            android:src="@drawable/ic_history_grey_900_36dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/ibFavorites"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibHome"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibFavorites"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_star_border_grey_900_36dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/ibDownloads"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibHistory"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibDownloads"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/downloads"
            android:src="@drawable/ic_file_download_grey_900"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/ibIncognito"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibFavorites"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.phlox.tvwebbrowser.widgets.CheckableImageButton
            android:id="@+id/ibIncognito"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/incognito_mode"
            android:src="@drawable/ic_incognito"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/ibSettings"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibDownloads"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/ibSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg_selector"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings_grey_900_24dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ibIncognito"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.phlox.tvwebbrowser.activity.main.view.CursorLayout
        android:id="@+id/flFullscreenContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:visibility="invisible"
        />

</RelativeLayout>
